[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "flask>=3.1.3",
    "google-genai>=1.64.0",
    "langchain>=1.2.10",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "streamlit>=1.54.0",
    "twilio>=9.10.2",
    "uvicorn>=0.41.0",
    "arxiv>=1.4.0",
    "PyMuPDF>=1.23.0",
    "ddgs>=9.10.0",
    "beautifulsoup4>=4.14.3",
]
